ReactDom to ReactDOMClient

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,11 @@
+// @import "node_modules/calcite-web/dist/sass/calcite-web";
+
 @import '~calcite-web/dist/css/calcite-web.min.css';
+
+// @import 'calcite-web';
+// @import 'calcite-web/dist/css/calcite-web.min.css';
+// @import 'node_modules/calcite-web/dist/css/calcite-web.min.css';
+// @import 'https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web.min.css';
 
 .cursor-pointer{
     cursor: pointer;
